--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/friendlinkType/edit.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/friendlinkType/edit.html
@@ -63,6 +63,36 @@
 </html>
 <script th:inline="javascript">
     /*<![CDATA[*/
+   var result = false;
+   var id = /*[[${cusTitle.id}]]*/;
+    //检查职务是否存在
+    function checkTypeName(typeName){
+        $.ajax({
+            url:/*[[@{/admin/m/ext/friendlinkType/checkTypeName.gsp}]]*/,
+            type:"post",
+            async : false,
+            data:{"id":id,"typeName":typeName},
+            dataType:"json",
+            success:function(data){              
+                result = data;              
+            }                                   
+        });
+        return result;
+    }
+    //检查头衔是否存在
+    function checkCodeNum(codeNum){
+        $.ajax({
+            url:/*[[@{/admin/m/ext/friendlinkType/checkCodeNum.gsp}]]*/,
+            type:"post",
+            async : false,
+            data:{"id":id,"codeNum":codeNum},
+            dataType:"json",
+            success:function(data){              
+                result = data;              
+            }                                   
+        });
+        return result;
+    }
     var form = layui.form();
     //自定义验证规则
     form.verify({
@@ -71,6 +101,8 @@
                 return '类型名称不能为空哦！';
             } else if (value.length > 20) {
                 return '类型名称不能太长哦，最长20个字！';
+            } else if(checkTypeName(value)==false){
+                return '该类型名称已经存在，请勿重复提交！';
             }
         },
         codeNum : function(value) {
@@ -78,6 +110,8 @@
                 return '类型编码不能为空哦！';
             } else if (value.length > 20) {
                 return '类型编码不能太长哦，最长20个字！';
+            }else if(checkCodeNum(value)==false){
+                return '该类型编码已经存在，请勿重复提交！';
             }
         },
         sortOrder : function(value) {
