--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/adSlot/edit.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/adSlot/edit.html
@@ -92,6 +92,36 @@
 </html>
 <script th:inline="javascript">
     /*<![CDATA[*/
+   var result = false;
+   var id = /*[[${result.id}]]*/;
+    //检查职务是否存在
+    function checkSlotName(slotName){
+        $.ajax({
+            url:/*[[@{/admin/m/ext/adSlot/checkSlotName.gsp}]]*/,
+            type:"post",
+            async : false,
+            data:{"id":id,"slotName":slotName},
+            dataType:"json",
+            success:function(data){              
+                result = data;              
+            }                                   
+        });
+        return result;
+    }
+    //检查头衔是否存在
+    function checkCodeNum(codeNum){
+        $.ajax({
+            url:/*[[@{/admin/m/ext/adSlot/checkCodeNum.gsp}]]*/,
+            type:"post",
+            async : false,
+            data:{"id":id,"codeNum":codeNum},
+            dataType:"json",
+            success:function(data){              
+                result = data;          
+            }                                   
+        });
+        return result;
+    }
     var form = layui.form();
     //自定义验证规则
     form.verify({
@@ -100,6 +130,8 @@
                 return '广告位名称不能为空哦！';
             } else if (value.length > 20) {
                 return '广告位名称不能太长哦，最长20个字！';
+            } else if(checkSlotName(value)==false){
+                return '该广告位名称已经存在，请勿重复提交！';
             }
         },
         codeNum : function(value) {
@@ -107,6 +139,8 @@
                 return '广告位编码不能为空哦！';
             } else if (value.length > 20) {
                 return '广告位编码不能太长哦，最长20个字！';
+            } else if(checkCodeNum(value)==false){
+                return '该广告位编码已经存在，请勿重复提交！';
             }
         },
         slotTemplate : function(value) {
