--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/guestbookType/add.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/guestbookType/add.html
@@ -75,7 +75,7 @@
 					<div class="layui-form-item">
 						<label class="layui-form-label"> 排序：<span style="color: red">*</span></label>
 						<div class="layui-input-block">
-							<input type="number" name="sortOrder" min="1" max="99"  value="1" required autocomplete="off" class="layui-input" autofocus="autofocus">
+							<input type="number" name="sortOrder" min="1" max="99" value="1" required autocomplete="off" class="layui-input" autofocus="autofocus">
 						</div>
 					</div>
 					<div class="layui-form-item">
@@ -100,6 +100,35 @@
 </html>
 <script th:inline="javascript">
     /*<![CDATA[*/
+    var result = false;
+    //检查职务是否存在
+    function checkTypeName(typeName){
+        $.ajax({
+            url:/*[[@{/admin/m/base/specialType/checkTypeName.gsp}]]*/,
+            type:"post",
+            async : false,
+            data:{"typeName":typeName},
+            dataType:"json",
+            success:function(data){              
+                result = data.success;              
+            }                                   
+        });
+        return result;
+    }
+    //检查头衔是否存在
+    function checkMetaKeywords(metaKeywords){
+        $.ajax({
+            url:/*[[@{/admin/m/base/specialType/checkMetaKeywords.gsp}]]*/,
+            type:"post",
+            async : false,
+            data:{"metaKeywords":metaKeywords},
+            dataType:"json",
+            success:function(data){              
+                result = data.success;          
+            }                                   
+        });
+        return result;
+    }
     var form = layui.form();
     //自定义验证规则
     form.verify({
@@ -108,6 +137,8 @@
                 return '类型名称不能为空哦！';
             } else if (value.length > 20) {
                 return '类型名称不能太长哦，最长20个字！';
+            } else if(checkTypeName(value)==false){
+                return '该类型名称已经存在，请勿重复提交！';
             }
         },
         codeNum : function(value) {
@@ -115,6 +146,8 @@
                 return '类型编码不能为空哦！';
             } else if (value.length > 20) {
                 return '类型编码不能太长哦，最长20个字！';
+            } else if(checkCodeNum(value)==false){
+                return '该类型名称已经存在，请勿重复提交！';
             }
         },
         maxLength : function(value) {
