--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/publishPoint/edit.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/publishPoint/edit.html
@@ -56,7 +56,7 @@
 					<div class="layui-form-item">
 						<label class="layui-form-label">显示路径：<span style="color: red">*</span></label>
 						<div class="layui-input-block">
-							<input type="text" name="displayPath" th:field="*{displayPath}" placeholder="请输入保存路径" lay-verify="displayPath" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="41">
+							<input type="text" name="displayPath" th:field="*{displayPath}" placeholder="请输入显示路径" lay-verify="displayPath" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="41">
 						</div>
 					</div>
 					<div class="layui-form-item">
