--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/scoreRecord/add.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/scoreRecord/add.html
@@ -25,13 +25,13 @@
 					<div class="layui-form-item">
 						<label class="layui-form-label">名 称：<span style="color: red">*</span></label>
 						<div class="layui-input-block">
-							<input name="groupName" class="layui-input" required lay-verify="groupName" placeholder="请输入选项名称" type="text" maxlength="21" />
+							<input name="groupName" class="layui-input" required lay-verify="groupName" placeholder="请输入名称" type="text" maxlength="21" />
 						</div>
 					</div>
 					<div class="layui-form-item">
 						<label class="layui-form-label">编 码：<span style="color: red">*</span></label>
 						<div class="layui-input-block">
-							<input name="codeNum" class="layui-input" required lay-verify="codeNum" value="1" min=1; max=100 placeholder="请输入选项名称" type="number" />
+							<input name="codeNum" class="layui-input" required lay-verify="codeNum" placeholder="请输入编码" type="text" maxlength="21" />
 						</div>
 					</div>
 					<div class="layui-form-item layui-form-text">
