--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/scoreRecord/addItem.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/scoreRecord/addItem.html
@@ -32,7 +32,7 @@
 					<div class="layui-form-item">
 						<label class="layui-form-label">分 值：<span style="color: red">*</span></label>
 						<div class="layui-input-block">
-							<input name="score" class="layui-input" lay-verify="score" value="1" min=1; max=100 placeholder="请输入选项名称" type="number" />
+							<input name="score" class="layui-input" lay-verify="score" value="1" min=1; max=100 placeholder="请输入选项分值" type="number" />
 						</div>
 					</div>
 					<div class="layui-form-item layui-form-text">
