--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/node/edit.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/node/edit.html
@@ -90,13 +90,13 @@
 						</div>
 					</div>
 					<div class="layui-form-item">
-						<label class="layui-form-label">排序：</label>
+						<label class="layui-form-label">排序：<span style="color: red">*</span></label>
 						<div class="layui-input-block">
 							<input type="number" th:field="*{sortOrder}" value="1" min="1" max="99" name="sortOrder" placeholder="请输入排序" lay-verify="sortOrder" required autocomplete="off" class="layui-input" autofocus="autofocus">
 						</div>
 					</div>
 					<div class="layui-form-item">
-						<label class="layui-form-label">链接地址：</label>
+						<label class="layui-form-label">链接地址：<span style="color: red">*</span></label>
 						<div class="layui-input-block">
 							<input type="text" th:field="*{nodeLink}" name="nodeLink" placeholder="请输入链接地址" lay-verify="nodeLink" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
 						</div>
