常规维护 不要更新

--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/core/monitor/sysinfoMonitorList.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/core/monitor/sysinfoMonitorList.html
@@ -18,7 +18,7 @@
 					</span>
 				</div>
 				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
-					<i class="layui-icon">&#xe60b;</i> 系统信息
+					<i class="layui-icon">&#xe60b;</i> 系统信息及配置
 				</blockquote>
 				<table class="layui-table" lay-even="" lay-skin="row">
 					<thead>
