--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/core/monitor/sysinfoMonitorList.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/core/monitor/sysinfoMonitorList.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title th:text="|#{customer.systemTitle}-管理中心-系统监控-缓存监控|">图灵谷</title>
+<title th:text="|#{customer.systemTitle}-管理中心-系统监控-系统信息|">图灵谷</title>
 <div th:replace="fragments/head_admin">head</div>
-<!--/***** 当前页css  start *****/-->
-<!--/***** 当前页css  end *****/-->
 </head>
 <body>
 	<div class="layui-layout layui-layout-admin">
@@ -17,9 +15,6 @@
 					<span class="layui-breadcrumb"> <a><cite>系统监控</cite></a> <a><cite>系统信息</cite></a>
 					</span>
 				</div>
-				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
-					<i class="layui-icon">&#xe60b;</i> 系统信息及配置
-				</blockquote>
 				<table class="layui-table" lay-even="" lay-skin="row">
 					<thead>
 						<tr>
